// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders a form combo 1`] = `
.c3 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.c1 {
  border: 0;
}

.c0 {
  max-width: 25rem;
  width: auto;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

.c5 {
  display: block;
  position: relative;
}

.c6 .c8 {
  border-radius: 100px;
}

.c10 {
  position: absolute;
  right: 0.28125rem;
  bottom: 0.28125rem;
}

.c7 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.c9 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c9::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c9::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c9:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c9::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c9:hover:not(:focus) {
  border-color: #5A5F65;
}

.c9:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c9:invalid,
.c9:-moz-ui-invalid {
  box-shadow: none;
}

.c9:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c9:focus {
  border-color: #0CD664;
  outline: none;
}

<form
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2"
    >
      2FA
    </legend>
    <ul
      className="c3"
    >
      <li
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <label
              className=""
            >
              <span
                className="c7"
              >
                Enable Two Factor Authentication
              </span>
              <input
                className="c8 c9"
                placeholder="Enter code"
                type="text"
              />
            </label>
          </div>
          <div
            className="c10"
          >
            <button
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders a form combo without a label 1`] = `
.c3 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.c1 {
  border: 0;
}

.c0 {
  max-width: 25rem;
  width: auto;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

.c5 {
  display: block;
  position: relative;
}

.c6 .c7 {
  border-radius: 100px;
}

.c9 {
  position: absolute;
  right: 0.28125rem;
  bottom: 0.28125rem;
}

.c8 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.c8::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c8::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c8:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.c8::placeholder {
  color: #6F7379;
  opacity: 1;
}

.c8:hover:not(:focus) {
  border-color: #5A5F65;
}

.c8:not(:placeholder-shown):not([type="date"]):invalid {
  border-color: #FF4E64;
}

.c8:invalid,
.c8:-moz-ui-invalid {
  box-shadow: none;
}

.c8:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c8:focus {
  border-color: #0CD664;
  outline: none;
}

<form
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2"
    >
      2FA
    </legend>
    <ul
      className="c3"
    >
      <li
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <input
              className="c7 c8"
              placeholder="Enter code"
              type="text"
            />
          </div>
          <div
            className="c9"
          >
            <button
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders correctly 1`] = `
.c5 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

.c3 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.c1 {
  border: 0;
}

.c0 {
  width: auto;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

<form
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2"
    >
      Sign up
    </legend>
    <ul
      className="c3"
    >
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="c5"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="c4"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders with HTML form attributes 1`] = `
.c5 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

.c3 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.c1 {
  border: 0;
}

.c0 {
  width: auto;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

<form
  action="#"
  className="c0"
  method="post"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2"
    >
      Sign up
    </legend>
    <ul
      className="c3"
    >
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="c5"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="c4"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders with custom fullWidth 1`] = `
.c5 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

.c3 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.c1 {
  border: 0;
}

.c0 {
  width: 100%;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

<form
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2"
    >
      Sign up
    </legend>
    <ul
      className="c3"
    >
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="c5"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="c4"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders with custom maxWidth 1`] = `
.c5 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

.c3 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.c1 {
  border: 0;
}

.c0 {
  max-width: 30rem;
  width: auto;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.c4:before {
  position: absolute;
  content: "\\200B";
}

<form
  className="c0"
>
  <fieldset
    className="c1"
  >
    <legend
      className="c2"
    >
      Sign up
    </legend>
    <ul
      className="c3"
    >
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="c5"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="c4"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="c4"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;
